<resources>
    <string name="app_name">FicheStage</string>
    <string name="NouveauFicheSuivie">Nouvelle fiche de suivie stage</string>
    <string name="SupprimerFicheSuivie">Supprimer une fiche de suivie de stage</string>
    <string name="ModificationFicheSuivie">Modifier une fiche de suivie de stage</string>
    <string name="Accueil">Accueil</string>
    <string name="btnAjouter">Nouvelle fiche</string>
    <string name="btnModifier">Modifier</string>
    <string name="btnSupprimer">Supprimer</string>
    <string name="btnSuivant1">SUIVANT</string>
    <string name="textMail">mail</string>
    <string name="TextTuteurPedagogique">Tuteur pedagogique</string>
    <string name="textEmail">email</string>
    <string name="textDateVisite">Date visite (jour/mois/année)</string>
    <string name="editTextEntreprise">Entreprise</string>
    <string name="editTextDivers">Divers</string>
    <string name="editTextTuteurEntreprise">Tuteur entreprise</string>
    <string name="editTextTelephone">Telephone</string>
    <string name="TextNomStagiaire">Nom stagiaire</string>
    <string name="textPrenom">Prénom</string>
    <string name="textAnnee">Année</string>
    <string name="radioButtonSISR">SISR</string>
    <string name="radioButtonSLAM">SLAM</string>
    <string name="TextCondition">Condition du stage</string>
    <string name="TextBilan">Bilan des travaux réalisé</string>
    <string name="textRessource">Ressource et outils utilisés</string>
    <string name="editTextCommentaire">Commentaires et appréciation générale</string>
    <string name="btnSuivant2">SUIVANT</string>
    <string name="btnSuivant3">SUIVANT</string>
    <string name="RadioButtonParticipationOralOUI">OUI</string>
    <string name="RadioButtonParticipationOralNON">NON</string>
    <string name="RadioButtonOpportuniteStageOUI">OUI</string>
    <string name="RadioButtonOpportuniteStageNON">NON</string>
    <string name="radioButtonMaiJuin">Mai - Juin 2019</string>
    <string name="radioButtonJanvierFevrier">Janvier - Février 2020</string>
    <string name="btnSuivant4">AJOUTER</string>
    <string name="textViewNom">Nom</string>
    <string name="textViewPrenom">Prenom</string>
    <string name="textViewNomEntreprise">Nom de l\'entreprise</string>
</resources>