<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="559dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextTextTuteurPedagogique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/TextTuteurPedagogique" />
        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textEmail"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/editTextTextDateVisite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textDateVisite"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextEntreprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextEntreprise"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextDivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextDivers"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextTuteurEntreprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextTuteurEntreprise"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextTelephone"
            android:inputType="phone" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSuivant2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnSuivant2" />
        </LinearLayout>
    </LinearLayout>





</android.support.constraint.ConstraintLayout>












